Fixed overflow and centered carousel items (#96)
* remove row causing overflow

* remove redundant media query

* center carousel items

---------

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -57,13 +57,6 @@
     margin-bottom: 2em;
 }
 
-@media (min-width: 991px) {
-    .row {
-        display: flex;
-        justify-content: center;
-    }
-}
-
 .home-carousel a {
     color: #ccc;
 }
